--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -92,6 +92,7 @@ header {
 
 .header-writing p {
     color: var(--light-purple);
+    font-size: 1.5em;
     font-weight: 500;
     text-align: center;
 }
@@ -226,6 +227,35 @@ header {
     border: 4px solid var(--purple);
     border-radius: 10px;
 }
+
+.axis path {
+    fill: none;
+    stroke: #7f7f7f;
+    stroke-width: 2px;
+    shape-rendering: crispEdges;
+}
+
+.axis line {
+  fill: none;
+  stroke: #7f7f7f;
+  stroke-width: 1px;
+  shape-rendering: crispEdges;
+}
+
+.label text {
+    fill: var(--white);
+    font-weight: 700;
+}
+
+.legend text {
+    fill: var(--light-gray);
+}
+
+.legend rect {
+    stroke: var(--light-gray);
+    stroke-width: 1px;
+}
+
 
 
 /*========================================== */
