edited viz7 legend

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -252,7 +252,7 @@ header {
     fill: var(--gray);
 }
 
-.legend rect {
+.legend circle {
     stroke: var(--light-gray);
     stroke-width: 1px;
 }
