--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -461,3 +461,25 @@ font-family: "Nexa Italic";
 src: url(../fonts/nexa/Nexa-Thin-Italic.ttf);
 font-weight: 100;
 }
+
+ .links line {
+        stroke: #999;
+        stroke-opacity: 0.6;
+    }
+
+    .nodes circle {
+        stroke: #741b56;
+        stroke-width: 2px;
+    }
+   div.tooltip {
+  position: absolute;
+  text-align: center;
+  width: 90px;
+  padding: 10px;
+  font: 12px sans-serif;
+  background: lightsteelblue;
+  border: 0px;
+  border-radius: 8px;
+  pointer-events: none;
+}
+
