--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -201,7 +201,7 @@ header {
 }
 
 #viz4 {
-    width: 70%;
+    width: 80%;
     height: 75vh;
     border: 4px solid var(--purple);
     border-radius: 10px;
@@ -235,7 +235,7 @@ header {
     shape-rendering: crispEdges;
 }
 
-.axis line {
+.axis line, .tick line {
   fill: none;
   stroke: #7f7f7f;
   stroke-width: 1px;
@@ -264,28 +264,6 @@ header {
 
 .legend-label {
     text-decoration: underline;
-}
-
-
-
-/*========================================== */
-
-.bounce {
-    animation: bounce 3s infinite;
-}
-
-/* Animation */
-
-@keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-30px);
-  }
-  60% {
-    transform: translateY(-15px);
-  }
 }
 
 figure {
@@ -339,6 +317,26 @@ figure {
 #viz2-input-value {
     margin-left: 10px;
     display: inline-block;
+}
+
+/*========================================== */
+
+.bounce {
+    animation: bounce 3s infinite;
+}
+
+/* Animation */
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
 }
 
 /*========================================== */
@@ -482,4 +480,3 @@ font-weight: 100;
   border-radius: 8px;
   pointer-events: none;
 }
-
